:bug: Make scrollbar corner opaque
Issue https://github.com/atom/one-light-ui/issues/4#issuecomment-73806609

+ Fix vertical active state

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -3,7 +3,7 @@
 }
 
 atom-workspace {
-  background-color: @app-background-color;
+	background-color: @app-background-color;
 }
 
 .status-bar .icon:before {
@@ -23,17 +23,26 @@ atom-workspace {
 		background: @scrollbar-background-color;
 	}
 
-	/deep/ ::-webkit-scrollbar-thumb,
-	/deep/ ::-webkit-scrollbar-corner {
+	/deep/ ::-webkit-scrollbar-thumb {
 		border-radius: @component-padding;
-		border: 3px solid transparent;
+		border: 3px solid @scrollbar-background-color;
 		background: @scrollbar-color;
 		background-clip: content-box;
 	}
 
-	/deep/ ::-webkit-scrollbar-thumb:active {
+	/deep/ ::-webkit-scrollbar-corner {
+		background: @scrollbar-background-color;
+	}
+
+	/deep/ ::-webkit-scrollbar-thumb:vertical:active {
 		border-radius: 0;
 		border-left-width: 0;
 		border-right-width: 0;
+	}
+
+	/deep/ ::-webkit-scrollbar-thumb:horizontal:active {
+		border-radius: 0;
+		border-top-width: 0;
+		border-bottom-width: 0;
 	}
 }
